Fix mobile overflow issue on PageNursingHome

--- a/frontend/src/styles/PageNursingHome.scss
+++ b/frontend/src/styles/PageNursingHome.scss
@@ -185,8 +185,13 @@ $hero-border: 1px solid white;
 }
 
 .nursinghome-title-vacancy-status-badge {
-	margin-left: 16px;
 	vertical-align: middle;
+	display: block;
+
+	@media (min-width: 800px) {
+		margin-left: 16px;
+		display: inline;
+	}
 }
 
 .nursinghome-info h3 {
